--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rxjs-compat": "6.5.5",
     "slick-carousel": "^1.8.1",
     "web-animations-js": "2.3.2",
+    "xlsx": "^0.16.3",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
