--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@syncfusion/ej2-angular-charts": "^18.1.53",
     "@webacad/ng-mat-file-upload": "^2.1.0",
     "ajv": "6.12.2",
+    "angular-file-saver": "^1.1.3",
     "angular2-text-show-more-less": "^0.1.5",
     "angular2-toaster": "^8.0.0",
     "arrive": "2.4.1",
@@ -44,6 +45,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
     "express": "4.17.1",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "googleapis": "50.0.0",
     "hammerjs": "2.0.8",
@@ -71,6 +73,7 @@
     "@angular/language-service": "9.1.6",
     "@types/bootstrap": "4.3.2",
     "@types/chartist": "0.9.48",
+    "@types/file-saver": "^2.0.1",
     "@types/googlemaps": "3.39.4",
     "@types/jasmine": "3.5.10",
     "@types/jquery": "3.3.38",
